src/objects/ssv4__OrgSrc__c.object
<CustomObject>
    <customHelpPage>ssv4__help</customHelpPage>
    <fields>
        <fullName>ssv4__Email__c</fullName>
        <inlineHelpText>current User email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ssv4__Language__c</fullName>
        <label>Language</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__Locale__c</fullName>
        <label>Locale</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__LoginLinkForCopy__c</fullName>
        <formula>HYPERLINK(&quot;javascript: prompt(&apos;&quot;+$Label.ssv4__MSG_CopyLink+&quot;&apos;, &apos;https://&quot;+ $RecordType.DeveloperName +&quot;.salesforce.com?un=&quot;+ssv4__uName__c+&quot;&amp;pw=&quot;+ssv4__Pass__c+&quot;&apos;);void(0);&quot;, $Label.ssv4__CopyLink,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>You can copy full login link with all needed credentials</inlineHelpText>
        <label>Copy Login Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__LoginUrl__c</fullName>
        <description>Link for quick insecure login.</description>
        <formula>HYPERLINK(&quot;javascript:var script = document.createElement(&apos;script&apos;);script.setAttribute(&apos;type&apos;, &apos;text/javascript&apos;);script.setAttribute(&apos;src&apos;, &apos;/resource/jsApi/js/ssEngine.js&apos;);document.head.appendChild(script); setTimeout(function(){ssEngine.jsExecuteApex(&apos;orgSrc&apos;,&apos;urllogin&apos;,&apos;&quot; + Id +&quot;&apos;,null);},1000)&quot;, IF(!ISBLANK(ssv4__uName__c) &amp;&amp; !ISBLANK(ssv4__Pass__c),$Label.ssv4__LoginLink,&apos;&apos;),&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link for quick insecure login.</inlineHelpText>
        <label>Login link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__OrgID__c</fullName>
        <inlineHelpText>Org Id, you can see this ID in Company Information</inlineHelpText>
        <label>Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__Pass__c</fullName>
        <description>Password for current Login Name</description>
        <inlineHelpText>Password for current Login Name</inlineHelpText>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__ProfileId__c</fullName>
        <inlineHelpText>Profile Id from Target ORG</inlineHelpText>
        <label>ProfileId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__Project__c</fullName>
        <label>Project</label>
        <referenceTo>ssv4__Project__c</referenceTo>
        <relationshipLabel>Orgs</relationshipLabel>
        <relationshipName>OrgSrcs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ssv4__RedirectUrl__c</fullName>
        <inlineHelpText>If you need automatically redirect to specific page after login, please provide this URL in this field. Also you can use a macro like {profileId}, {userId}, {orgId}

Example : /00e?setupid=EnhancedProfiles</inlineHelpText>
        <label>Redirect Url</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__RemoteSiteLink__c</fullName>
        <formula>HYPERLINK(&apos;/0rp/e?SiteName=&apos;+ SUBSTITUTE(MID(ssv4__ServerURL__c,FIND(&apos;:&apos;,ssv4__ServerURL__c)+3,FIND(&apos;.&apos;,ssv4__ServerURL__c)-FIND(&apos;:&apos;,ssv4__ServerURL__c)-3),&apos;-&apos;,&apos;&apos;)+&apos;&amp;EndpointUrl=&apos; +  MID(ssv4__ServerURL__c,0,  FIND(&apos;com&apos;,ssv4__ServerURL__c)+2) , IF(ISBLANK(ssv4__ServerURL__c),&apos;&apos;,&apos;Create Remote Site Setting&apos;) ,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remote Site Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__ServerURL__c</fullName>
        <description>Reserved Field</description>
        <inlineHelpText>Reserved Field</inlineHelpText>
        <label>ServerURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ssv4__TimeZone__c</fullName>
        <label>TimeZone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__Token__c</fullName>
        <label>Token</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__UserId__c</fullName>
        <label>UserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__appLoginToken__c</fullName>
        <label>App Token</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ssv4__appLogin__c</fullName>
        <formula>HYPERLINK(&quot;javascript:var script = document.createElement(&apos;script&apos;);script.setAttribute(&apos;type&apos;, &apos;text/javascript&apos;);script.setAttribute(&apos;src&apos;, &apos;/resource/jsApi/js/ssEngine.js&apos;);document.head.appendChild(script); setTimeout(function(){ssEngine.jsExecuteApex(&apos;orgSrc&apos;,&apos;applogin&apos;,&apos;&quot; + Id +&quot;&apos;,null);},1000)&quot;, IF(!ISBLANK(ssv4__uName__c) &amp;&amp; !ISBLANK(ssv4__Pass__c),$Label.ssv4__LoginLink,&apos;&apos;),&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>You can login to salesforce org as Salesforce1 application. Please copy all url than you get to field &quot;App Login Token&quot;</inlineHelpText>
        <label>Login as App</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__defaultCurrency__c</fullName>
        <label>Default Currency</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__exceptTypes__c</fullName>
        <label>Except Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AccountCriteriaBasedSharingRule</fullName>
                </value>
                <value>
                    <fullName>AccountOwnerSharingRule</fullName>
                </value>
                <value>
                    <fullName>AccountSharingRules</fullName>
                </value>
                <value>
                    <fullName>AnalyticSnapshot</fullName>
                </value>
                <value>
                    <fullName>ApexClass</fullName>
                </value>
                <value>
                    <fullName>ApexComponent</fullName>
                </value>
                <value>
                    <fullName>ApexPage</fullName>
                </value>
                <value>
                    <fullName>ApexTrigger</fullName>
                </value>
                <value>
                    <fullName>ApexTriggerCoupling</fullName>
                </value>
                <value>
                    <fullName>ApprovalProcess</fullName>
                </value>
                <value>
                    <fullName>AssignmentRule</fullName>
                </value>
                <value>
                    <fullName>AssignmentRules</fullName>
                </value>
                <value>
                    <fullName>AuthProvider</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRule</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRules</fullName>
                </value>
                <value>
                    <fullName>BusinessProcess</fullName>
                </value>
                <value>
                    <fullName>CallCenter</fullName>
                </value>
                <value>
                    <fullName>CampaignCriteriaBasedSharingRule</fullName>
                </value>
                <value>
                    <fullName>CampaignOwnerSharingRule</fullName>
                </value>
                <value>
                    <fullName>CampaignSharingRules</fullName>
                </value>
                <value>
                    <fullName>CaseCriteriaBasedSharingRule</fullName>
                </value>
                <value>
                    <fullName>CaseOwnerSharingRule</fullName>
                </value>
                <value>
                    <fullName>CaseSharingRules</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>CompactLayout</fullName>
                </value>
                <value>
                    <fullName>ConnectedApp</fullName>
                </value>
                <value>
                    <fullName>ContactCriteriaBasedSharingRule</fullName>
                </value>
                <value>
                    <fullName>ContactOwnerSharingRule</fullName>
                </value>
                <value>
                    <fullName>ContactSharingRules</fullName>
                </value>
                <value>
                    <fullName>CustomApplication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ssv4__isMultiCurrency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMultiCurrency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssv4__isPersonAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPersonAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssv4__uName__c</fullName>
        <description>User Name</description>
        <inlineHelpText>User Name format  xxxxxxx@yyyyy.zzz</inlineHelpText>
        <label>User Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__userFullName__c</fullName>
        <label>User FullName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Org</label>
    <listViews>
        <fullName>ssv4__All</fullName>
        <columns>NAME</columns>
        <columns>ssv4__Email__c</columns>
        <columns>ssv4__LoginUrl__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orgs</pluralLabel>
    <recordTypes>
        <fullName>ssv4__gs0</fullName>
        <active>false</active>
        <description>Prerelease Edition of Org</description>
        <label>PreRelease</label>
    </recordTypes>
    <recordTypes>
        <fullName>ssv4__login</fullName>
        <active>true</active>
        <description>Developer Edition of Org</description>
        <label>Developer</label>
    </recordTypes>
    <recordTypes>
        <fullName>ssv4__test</fullName>
        <active>true</active>
        <description>SandBox of Org</description>
        <label>SandBox</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>